# sshbot

./: .env  .gitignore  pyproject.toml
src/: app.py  config.py  initialize.py
src/blueprints/: __init__.py  command.py
src/middlewares/: __init__.py  only_me.py
