[tool.poetry]
name = "simple-bot"
version = "0.1.0"
description = ""
authors = []
license = ""

[tool.poetry.dependencies]
python = "^3.9"
envparse = "^0.2.0"
tortoise-orm = "^0.17.8"
asyncssh = "^2.12.0"
telefone = {version = "0.5rc1", allow-prereleases = true}
vbml = "^1.1.post1"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
loguru = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
